@startuml
!include ../class-style.puml
package "Controller Layer" #EEF6FF {
  class MasterTenantController <<Controller>> {
    - masterTenantService: MasterTenantService
    + retry(id: Long, request: TenantAdminRequest): ApiResponse<TenantResponse>
  }
}
package "DTO Layer" #FFF8EF {
  class TenantAdminRequest <<Request>> {
    + adminName: String
    + adminEmail: String
    + adminPassword: String {writeOnly}
  }
  class TenantResponse <<Response>> {
    + id: Long
    + code: String
    + dbName: String
    + status: TenantStatus
  }
}
package "Service Layer" #EFFBF4 {
  interface MasterTenantService <<Service>> {
    + retryProvisioning(id: Long, request: TenantAdminRequest): TenantResponse
  }
  class MasterTenantServiceImpl <<Service>> {
    - tenantRepository: TenantInfoRepository
    - provisioningService: TenantProvisioningService
    + retryProvisioning(id: Long, request: TenantAdminRequest): TenantResponse
  }
  interface TenantProvisioningService <<Service>> {
    + retry(tenant: TenantInfo, admin: TenantAdminRequest): void
  }
  class TenantProvisioningServiceImpl <<Service>> {
    - lockManager: ProvisioningLockManager
    - dataSourceFactory: TenantDataSourceFactory
    - flywayService: FlywayMigrationService
    + retry(tenant: TenantInfo, admin: TenantAdminRequest): void
  }
}
package "Repository Layer" #F5F3FF {
  interface TenantInfoRepository <<Repository>> {
    + findById(id: Long): Optional<TenantInfo>
    + saveAndFlush(tenant: TenantInfo): TenantInfo
  }
}
package "Domain Entity Layer" #F0FBF5 {
  class TenantInfo <<Entity>> {
    - id: Long
    - code: String
    - dbName: String
    - managedDatabase: boolean
    - status: TenantStatus
    + startProvisioning(): void
    + activate(): void
    + failProvisioning(): void
  }
  class TenantAdminUser <<Entity>> {
    - email: String
    - passwordHash: String
    - role: UserRole
  }
  enum TenantStatus <<Enum>> {
    PROVISIONING
    ACTIVE
    FAILED
  }
}
package "Infrastructure & Persistence" #FFFCEE {
  class ProvisioningLockManager <<Infrastructure>> {
    + tryLock(tenantId: Long): boolean
    + unlock(tenantId: Long): void
  }
  class TenantDataSourceFactory <<Infrastructure>> {
    + createOrReuse(tenant: TenantInfo): DataSource
  }
  class FlywayMigrationService <<Infrastructure>> {
    + migrateTenant(dataSource: DataSource): void
  }
  class MasterPostgreSQL <<Database>> {
    + tenants
    + advisory_lock
  }
  class DedicatedTenantMySQL <<Database>> {
    + users
    + flyway_schema_history
  }
}
MasterTenantController --> MasterTenantService : delegates >
MasterTenantController ..> TenantAdminRequest : consumes >
MasterTenantController ..> TenantResponse : returns >
MasterTenantServiceImpl ..|> MasterTenantService : implements
MasterTenantService -[hidden]down-> MasterTenantServiceImpl
MasterTenantServiceImpl --> TenantInfoRepository : manages status >
MasterTenantServiceImpl --> TenantProvisioningService : retries through >
TenantProvisioningServiceImpl ..|> TenantProvisioningService : implements
TenantProvisioningService -[hidden]down-> TenantProvisioningServiceImpl
TenantProvisioningServiceImpl --> ProvisioningLockManager : prevents concurrent retry >
TenantProvisioningServiceImpl --> TenantDataSourceFactory : creates or reuses >
TenantProvisioningServiceImpl --> FlywayMigrationService : migrates idempotently >
TenantProvisioningServiceImpl ..> TenantAdminUser : seeds idempotently >
TenantInfoRepository --> TenantInfo : manages >
TenantInfoRepository --> MasterPostgreSQL : persists to >
ProvisioningLockManager --> MasterPostgreSQL : locks session >
TenantDataSourceFactory --> DedicatedTenantMySQL : connects to >
FlywayMigrationService --> DedicatedTenantMySQL : migrates >
DedicatedTenantMySQL *-- TenantAdminUser : stores >
TenantInfo --> TenantStatus : typed by >
@enduml

